samples/_failures_safe/1761318618_9cd684_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f01e842.c: In function ‘main’:
./samples/SAFE/__tmp_1f01e842.c:155:33: error: expected ‘;’ at end of input
  155 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_1f01e842.c:155:21: error: expected declaration or statement at end of input
  155 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_1f01e842.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f01e842.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f01e842.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f01e842.c:155:21: error: expected declaration or statement at end of input
